# GeneticPartitionProject

./: Assignment_1.c  Assignment_1.h  Assignment_2.h  Assignment_3.c  Assignment_3.h  Assignment_4.c  Assignment_4.h  Assignment_5.c  CMakeLists.txt  GeneticPartitionConfigurationSettings.c  GeneticPartitionConfigurationSettings.h  GeneticPartitionConfigurationSimulation.c  GeneticPartitionConfigurationSimulation.h  GeneticPartitionCore.c  GeneticPartitionCore.h  GeneticPartitionVisualization.c  GeneticPartitionVisualization.h  README.md  Testing.c  Testing.h  main.c
Assignments/: Assignment_1.c  Assignment_1.h  Assignment_2.c  Assignment_2.h  Assignment_3.c  Assignment_3.h  Assignment_4.c  Assignment_4.h  Assignment_5.c  Assignment_5.h
