cmake_minimum_required(VERSION 3.0)
project(GeneticPartition C)

set(CMAKE_C_STANDARD 99)

add_executable(GeneticPartition main.c Assignments/Assignment_1.c Assignments/Assignment_1.h Assignments/Assignment_2.c Assignments/Assignment_2.h Assignments/Assignment_3.c Assignments/Assignment_3.h Assignments/Assignment_4.c Assignments/Assignment_4.h Assignments/Assignment_5.c Assignments/Assignment_5.h GeneticPartitionCore.c GeneticPartitionCore.h)
